--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     
     <img src ="https://i.pinimg.com/736x/05/54/6b/05546b7a15d44d2985631d7e1f0aa7f5.jpg" alt ="tirinha dos numeros primos" width="300"height ="300"><br>
 
+    <link rel ="stylesheet" type ="text/css" href ="style.css">
     
 </body>
   
